--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.2",
     "@supabase/supabase-js": "^2.57.4",
     "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
